# example_super_app

./: .gitignore  BUILD.bat  CMakeLists.txt  CMakePresets.json  cpm.json  dirS  fileB  modA  readme.md  super_app.sln  super_app.vcxproj  supper_app.sln  supper_app.vcxproj
.github/workflows/: build.yml
include/: .gitignore
src/: CMakeLists.txt  super_app.cpp
